tests/fixtures/runtime_error_loc.stderr
Error in /srv/repos/rust/sh2c/tests/fixtures/runtime_error_loc.sh2:2
